# multi-agent-custom-automation-engine-solution-accelerator

./: .flake8  .gitignore  LICENSE  Multi-Agent-Custom-Automation-Engine-Solution-Accelerator.code-workspace  README.md  TRANSPARENCY_FAQS.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  azure.yaml  main.py  next-steps.md  pyproject.toml  pytest.ini  remov
src/backend/: .env.old  .env.sample  Dockerfile  README.md  app.py  app_config.py  app_factory.py  app_kernel.py  config.py  config_kernel.py  event_utils.py  otlp_tracing.py  pyproject.toml  requirements.txt  utils.py  utils_kernel.py
src/backend/agents/: agentutils.py  base_agent.py  generic.py  group_chat_manager.py  hr.py  human.py  marketing.py  planner.py  procurement.py  product.py  tech_support.py
src/backend/agents_factory/: agent_config.py  agent_factory.py  agent_interface.py
src/backend/auth/: auth_utils.py
src/backend/context/: cosmos_memory.py  cosmos_memory_kernel.py  in_memory_context.py
src/backend/handlers/: runtime_interrupt.py  runtime_interrupt_kernel.py
src/backend/kernel_agents/: agent_base.py  agent_config.py  agent_factory.py  agent_utils.py  generic_agent.py  group_chat_manager.py  hr_agent.py  human_agent.py  marketing_agent.py  marketing_tools.py  planner_agent.py  procurement_agent.py  procurement_tools.py  product_agent.py  (+4 more)
src/frontend/: .env.sample  .eslintrc.js  .gitignore  Dockerfile  README.md  frontend_server.py  index.html  migration-commands.txt  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts  vitest.config.ts
(+331 files in other folders)
